--- a/grocery store/css/admin_style.css
+++ b/grocery store/css/admin_style.css
@@ -39,7 +39,7 @@
    text-align: center;
    border:var(--border);
    box-shadow: var(--box-shadow);
-   background-color: var(--white);
+   background-color: var(--white); 
    border-radius: .5rem;
 }
 
@@ -58,9 +58,9 @@
    margin:1rem 0;
    padding:1.2rem 1.4rem;
    font-size: 1.8rem;
-   color:var(--black);
+   color:var(white);
    border-radius: .5rem;
-   background-color: var(--light-bg);
+   background-color: black;
    border:var(--border);
 }
 
@@ -75,7 +75,7 @@
 
 .show-products .box-container{
    display: grid;
-   grid-template-columns: repeat(auto-fit, 33rem);
+   grid-template-columns: repeat(auto-fit, 30rem);
    gap:1.5rem;
    align-items: flex-start;
    justify-content:center;
@@ -102,7 +102,7 @@
 }
 
 .show-products .box-container .box img{
-   width: 100%;
+   width: 80%;
    margin-bottom: 1rem;
 }
 
@@ -125,7 +125,7 @@
 }
 
 .update-product form{
-   max-width: 50rem;
+   max-width: 45rem;
    padding:2rem;
    margin:0 auto;
    text-align: center;
@@ -186,7 +186,7 @@
    font-size: 1.8rem;
    border:var(--border);
    border-radius: .5rem;
-   background-color: var(--light-bg);
+   background-color: black;
    margin-bottom: .5rem;
 }
 
