--- a/grocery store/css/style.css
+++ b/grocery store/css/style.css
@@ -1,7 +1,7 @@
 @import url('components.css');
 
 .home-bg{
-   background: url(../images/home-bg.jpg);
+   background: url(../images/home-bg.jpg) no-repeat;
    background-size: cover;
    background-position: center;
 }
@@ -25,7 +25,7 @@
    font-size: 3rem;
    text-transform: uppercase;
    margin-top: 1.5rem;
-   color:var(--black);
+   color:black;
 }
 
 .home-bg .home .content p{
@@ -45,7 +45,10 @@
    grid-template-columns: repeat(auto-fit, 27rem);
    gap:1.5rem;
    justify-content: center;
-   align-items: flex-start;
+   /* align-items: flex-start; */
+   align-items: normal;
+   margin-bottom: 2rem;
+
 }
 
 .home-category .box-container .box{
@@ -64,7 +67,7 @@
 
 .home-category .box-container .box h3{
    text-transform: uppercase;
-   color:var(--black);
+   color:var(--darkblack);
    padding:1rem 0;
    font-size: 2rem;
 }
@@ -77,12 +80,15 @@
 }
 
 .home-category{
+   background-color:transparent;
+   background-repeat: no-repeat;
+   max-width: 100%;
    padding-bottom: 0;
 }
 
 .products .box-container{
    display: grid;
-   grid-template-columns: repeat(auto-fit, 35rem);
+   grid-template-columns: repeat(auto-fit, 30rem);
    gap:1.5rem;
    justify-content: center;
    align-items: flex-start;
@@ -122,18 +128,36 @@
    line-height: 4.3rem;
    width: 5rem;
    border:var(--border);
-   color:var(--black);
+   color:var(--darkblack);
    font-size: 2rem;
    background-color: var(--white);
 }
+
+/* .products .box-container .box .fa-heart{
+   position: absolute;
+   top:6rem; right:1rem;
+   border-radius: .5rem;
+   height: 4.5rem;
+   line-height: 4.3rem;
+   width: 5rem;
+   border:var(--border);
+   color:var(--darkblack);
+   font-size: 2rem;
+   background-color: var(--white);
+} */
 
 .products .box-container .box .fa-eye:hover{
    color:var(--white);
    background-color: var(--black);
 }
 
+/* .products .box-container .box .fa-heart::after{
+   color:var(--white);
+   background-color: crimson;
+} */
+
 .products .box-container .box img{
-   width: 100%;
+   width: 80%;
    margin-bottom: 1rem;
 }
 
@@ -154,7 +178,7 @@
 }
 
 .quick-view .box{
-   max-width: 50rem;
+   max-width: 45rem;
    padding:2rem;
    text-align: center;
    border:var(--border);
@@ -166,7 +190,7 @@
 }
 
 .quick-view .box img{
-   height: 25rem;
+   height: 22rem;
    margin-bottom: 1rem;
 }
 
@@ -234,7 +258,7 @@
 }
 
 .p-category a:hover{
-   background-color: var(--black);
+   background-color: var(--darkblack);
    color: var(--white);
 }
 
@@ -246,26 +270,29 @@
 }
 
 .about .row .box{
-   flex:1 1 40rem;
+   flex:30rem;
    text-align: center;
 }
 
 .about .row .box img{
    margin-bottom: 2rem;
-   height: 40rem;
+   height: 30rem;
 }
 
 .about .row .box h3{
    padding:1rem 0;
-   font-size: 2.5rem;
+   font-size: 3.5rem;
    text-transform: uppercase;
-   color:var(--black);
+   color:seagreen;
 }
 
 .about .row .box p{
-   line-height: 2;
-   font-size: 1.5rem;
-   color:var(--light-color);
+   /* line-height: 2; */
+   /* font-size: 1.5rem; */
+   color:tomato;
+   font: inherit;
+   font-size: large;
+   font-weight: 900;
    padding:1rem 0;
 }
 
@@ -381,7 +408,7 @@
 
 .wishlist .box-container{
    display: grid;
-   grid-template-columns: repeat(auto-fit, 35rem);
+   grid-template-columns: repeat(auto-fit, 30rem);
    gap:1.5rem;
    justify-content: center;
    align-items: flex-start;
@@ -444,7 +471,7 @@
 }
 
 .wishlist .box-container .box img{
-   width: 100%;
+   width: 80%;
    margin-bottom: 1rem;
 }
 
@@ -488,7 +515,7 @@
 
 .shopping-cart .box-container{
    display: grid;
-   grid-template-columns: repeat(auto-fit, 35rem);
+   grid-template-columns: repeat(auto-fit, 30rem);
    gap:1.5rem;
    justify-content: center;
    align-items: flex-start;
@@ -551,7 +578,7 @@
 }
 
 .shopping-cart .box-container .box img{
-   width: 100%;
+   width: 80%;
    margin-bottom: 1rem;
 }
 
@@ -615,7 +642,7 @@
    font-size: 2rem;
    text-align: center;
    border:var(--border);
-   background-color: var(--white);
+   background-color: black;
    box-shadow: var(--box-shadow);
    border-radius: .5rem;
 }
@@ -627,17 +654,21 @@
 .display-orders .grand-total{
    margin-top: 2rem;
    font-size: 2.5rem;
-   color:var(--light-color);
+   color:white;
 }
 
 .display-orders .grand-total span{
-   color:var(--red);
+   color:greenyellow;
 }
 
 .checkout-orders form{
    padding:2rem;
    border:var(--border);
-   background-color: var(--white);
+   background-color: rgba(0, 0, 0, 0.5); /* Adjust the alpha value to change the transparency */
+   border-radius: 10px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+   backdrop-filter: blur(5px);
+   /* background-color: var(--white); */
    box-shadow: var(--box-shadow);
    border-radius: .5rem;
 }
@@ -669,21 +700,22 @@
    border:var(--border);
    border-radius: .5rem;
    font-size: 1.8rem;
-   color:var(--black);
+   color:var(--white);
    padding:1.2rem 1.4rem;
    margin:1rem 0;
-   background-color: var(--light-bg);
+   background-color: black;
 }
 
 .checkout-orders form .flex .inputBox span{
    font-size: 1.8rem;
-   color:var(--light-color);
+   color:white;
 }
 
 .placed-orders .box-container{
    display: flex;
    flex-wrap: wrap;
    gap:1.5rem;
+   justify-content: center;
    align-items: flex-start;
 }
 
@@ -706,14 +738,6 @@
 .placed-orders .box-container .box p span{
    color:var(--green);
 }
-
-
-
-
-
-
-
-
 
 @media (max-width:768px){
 
@@ -760,4 +784,17 @@
       grid-template-columns: 1fr;
    }
 
+}
+
+.pdf-list {
+	width: 80%;
+}
+.card {
+	width: 18rem;
+}
+.category .list-group {
+	width: 200px;
+}
+.nd {
+	text-decoration: none;
 }
